API DOCS edits for uploads
